# sassy

./: .assistant.json  .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
sassy/: __init__.py  config.py  functions.py  main.py  oasx.py  server.py
sassy/data_model/: jsons.py  oas.py
tests/: test_oapi_spec.py
tmpl/: api.json.j2
