[tool.poetry]
name = "sassy"
version = "0.0.1"
description = ""
authors = ["Kexin Xie <kexin.xie@salesforce.com>"]
readme = "README.md"

[tool.poetry.scripts]
main = "sassy:run"

[tool.poetry.dependencies]
python = "^3.12"
quart = "^0.20.0"
openai = "^1.12.0"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
jinja2 = "^3.1.3"
pydantic = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
